--- a/config.json
+++ b/config.json
@@ -8,6 +8,6 @@
 	"ownerList": ["6285714897009@s.whatsapp.net", "6285714897009@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://i.postimg.cc/XNFmqpr1/76271a67a3e6162e0d0f80b1bc1d17f4.jpg",
-	"pack": "Yang Nyolong Nak Babi",
+	"pack": "By RamadhanBotXd",
 	"author": "TrashBot"
 }
